// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor component renders correctly 1`] = `
<Link
  as=""
  href="/undefined"
  scroll=""
  shallow={false}
>
  <a
    className="sample-anchor"
    data-locator=""
    href=""
    target="_self"
    title=""
  >
    Random anchor
  </a>
</Link>
`;

exports[`Anchor component renders correctly with nolink variation 1`] = `
<a
  className="sample-anchor-nolink"
  data-locator=""
  href="/undefined"
  onClick={[Function]}
  target="_self"
  title=""
>
  Random anchor with no link component
</a>
`;
